appTier/app-chart/templates/api-ingress-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: app-api-allow
spec:
  podSelector:
    matchLabels:
      app: app-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: presentation
    - podSelector:
        matchLabels:
          app: db-tier
    ports:
    - protocol: TCP
      port: 8081
